some Commponr=ent added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charity</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+     <link rel="stylesheet" href="../fontawesome-free-5.15.4-web/css/all.css" />
     <link rel="stylesheet" href="/src/index.css">
   </head>
+  <!-- https://preview.themeforest.net/item/donat-charity-fundraising-wordpress-theme/full_screen_preview/56746390 -->
+   <!-- https://preview.themeforest.net/item/lenity-charity-donation-wordpress-theme/full_screen_preview/57014060 -->
+    <!-- https://themegavias.com/wp/donatm/home-3/ -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
